--- a/src/shim/conf/config.toml
+++ b/src/shim/conf/config.toml
@@ -2,3 +2,5 @@ log_level = "info" # "debug" "info" "warn" "error"
 
 [containerd]
     socket = "/run/containerd/containerd.sock"
+    agent_container_instance = "/opt/enclave-cc/agent-instance/"
+    agent_container_root_dir = "/run/containerd/agentenclave"
