--- a/src/shim/conf/config.toml
+++ b/src/shim/conf/config.toml
@@ -4,3 +4,4 @@ log_level = "info" # "debug" "info" "warn" "error"
     socket = "/run/containerd/containerd.sock"
     agent_container_instance = "/opt/enclave-cc/agent-instance/"
     agent_container_root_dir = "/run/containerd/agentenclave"
+    agent_url = "tcp://0.0.0.0:7788"
