shim: support launch app enclave container based on occlum sefs
Signed-off-by: Shirong Hao <shirong@linux.alibaba.com>

--- a/src/shim/conf/config.toml
+++ b/src/shim/conf/config.toml
@@ -5,3 +5,4 @@ log_level = "info" # "debug" "info" "warn" "error"
     agent_container_instance = "/opt/enclave-cc/agent-instance/"
     agent_container_root_dir = "/run/containerd/agentenclave"
     agent_url = "tcp://0.0.0.0:7788"
+    boot_container_instance = "/opt/enclave-cc/boot-instance/"
